# types.go
@@ -7,7 +7,6 @@ type CreateAccountRequest struct {
 	LastName  string `json:"last_name" validate:"required,min=2,max=50,alpha"`
 	Email     string `json:"email" validate:"required,email"`
 	Password  string `json:"password" validate:"required,min=8,max=50,containsany=1-9,containsany=Aa-Zz,alphanumunicode"`
-	UserType  string `json:"user_type" validate:"required,eq=ADMIN|eq=USER"`
 }
 
 type UpdateAccountRequest struct {
@@ -20,7 +19,27 @@ type UpdateAccountRequest struct {
 }
 type LoginRequest struct {
 	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=2,max=50"`
+	Password string `json:"password" validate:"required,min=8,max=50,containsany=1-9,containsany=Aa-Zz,alphanumunicode"`
+}
+
+type AccountResponse struct {
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Email     string `json:"email"`
+	UseryType string `json:"user_type"`
+	Uuid      string `json:"uuid"`
+	Token     string `json:"token"`
+}
+
+func NewAccountResponse(firstName, lastName, email, userType, uuid, token string) *AccountResponse {
+	return &AccountResponse{
+		FirstName: firstName,
+		LastName:  lastName,
+		Email:     email,
+		UseryType: userType,
+		Uuid:      uuid,
+		Token:     token,
+	}
 }
 
 type Account struct {
@@ -31,7 +50,7 @@ type Account struct {
 	Password     string    `json:"password" validate:"required,min=8,max=50,containsany=1-9,containsany=Aa-Zz,alphanumunicode"`
 	UserType     string    `json:"user_type" validate:"required,eq=ADMIN|eq=USER"`
 	Uuid         string    `json:"uid" validate:"required,uuid"`
-	Token        string    `json:"token"validate:"jwt"`
+	Token        string    `json:"token" validate:"jwt"`
 	RefreshToken string    `json:"refresh_token"`
 	CreatedOn    time.Time `json:"created_at"`
 	UpdatedOn    time.Time `json:"updated_at"`
@@ -54,7 +73,7 @@ type GenericError struct {
 	Message string `json:"message"`
 }
 
-type GenericErrors struct {
+type ValidationErrors struct {
 	Messages []string `json:"messages"`
 }
 
